--- a/views/controlpanel.hbs
+++ b/views/controlpanel.hbs
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{titulo}}</title>
     <link rel="stylesheet" href="./css/controlpanel.css">
+    <link rel="stylesheet" href="./css/tablas.css">
+
 </head>
 
 <body>
     <div>
         {{> banner}}
     </div>
-
 </body>
 <script src="./js/controlpanel.js"></script>
 </html>
