--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,6 +19,7 @@
                 <input type="password" name="PASSWORD" class="input" placeholder="Contraseña">
                 <i class="fa-solid fa-lock"></i>
             </div>
+            <div id="error"></div>
             <button type="submit" class="submit">Iniciar Sesión</button>
         </form>
         <div id="invalido"></div>
