--- a/public/css/controlpanel.css
+++ b/public/css/controlpanel.css
@@ -4,7 +4,7 @@ body {
 
 form {
     max-width: 600px;
-    margin: 20px auto;
+    margin: 20px 10px;
 }
 
 label {
@@ -13,7 +13,7 @@ label {
 }
 
 input, select {
-    width: 25%;
+    width: 50%;
     padding: 8px;
     margin-top: 5px;
     margin-right: 5px;
