boton de eliminar producto de forma definitiva funcionando, cambiado nombre de botones

--- a/views/partials/banner.hbs
+++ b/views/partials/banner.hbs
@@ -2,4 +2,5 @@
 <button type="button" id="listar">Productos</button>
 <button type="button" id="crear">Crear Producto</button>
 <button type="button" id="editar">Editar Producto</button>
-<button type="button" id="borrar">Borrar Producto</button>
+<button type="button" id="borrar">Descontinuar Producto</button>
+<button type="button" id="eliminar">Eliminar Producto</button>
